# L3-IrisaParser

./: .gitignore  CHANGELOG.md  DOC.md  README.md  dev.spacy  entrainement.py  evaluation.py  extractIntroduction.py  extractIntroductionForExtraction.py  extractIntroductionForIntegration.py  main.py  output.txt  pyproject.toml  setup.py  test.txt  train.spacy
Entrainement/0024D62C3F58D39D86BD8946960012420E5C641E/: 0024D62C3F58D39D86BD8946960012420E5C641E.json
Entrainement/0123A3A98705BEF7633E40E985B505F1DE36CE31/: 0123A3A98705BEF7633E40E985B505F1DE36CE31.json
Entrainement/0206A38B70BB1E96E1D1AA79289A22E95F0998E1/: 0206A38B70BB1E96E1D1AA79289A22E95F0998E1.json
Entrainement/036EE83021A65FCD0CCC73CA6EE94B385DA300BB/: 036EE83021A65FCD0CCC73CA6EE94B385DA300BB.json
doc/: 0_begin.md  1_selecting.md  2_modules.md  3_example1.md  4_example2.md  5_example3.md
docs/: Makefile  conf.py  example.ipynb  make.bat  useful_commands.md
irisaparser/: AccuracyTest.py  ExtractAuthors.py  Title Extraction.ipynb  TrainModel.py  __init__.py  __main__.py  absExtract.py  abstract_lib.py  authors_lib.py  biblioCorentin.py  biblioSam.py  body_lib.py  cli.py  conclusion_discussion.py  conclusion_discussion_lib.py  conclusion_lib.py  extract.py  hello.py  intro_lib.py  irisaparser.py  lib_metadata.py  metadata_lib.py  references_lib.py  test.py  test_metadata.py  text_extractor.py  title.py  title_filters.py  title_lib.py  title_wip.py  titlefont.py  wip_spacing.py
irisaparser/CustomNER/: config.cfg  (+1 more)
tests/: test_capitalize.py  test_irisaparser.py  test_metadata.py  test_title.py
(+137 files in other folders)
